[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2021"
homepage = "https://github.com/dustinknopoff/recipe-grabber"
include = ["src/**", "README.md", "LICENSE_MIT", "LICENSE_APACHE"]
license = "MIT or Apache 2.0"
name = "recipe-grabber"
readme = "README.md"
repository = "https://github.com/dustinknopoff/recipe-grabber"
version = "0.4.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "recipe-grabber"
path = "src/bin.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1", optional = true}
anyhow = "1"
lexical-core = "0.8"
nom = "7"
parking_lot_core = "0.9"
scraper = "0.13"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
worker = "0.0.12"
http = "0.2.8"

[dev-dependencies]
dissimilar = "1"
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0
